--- a/notebooks/02_enriquecimiento_eda.ipynb
+++ b/notebooks/02_enriquecimiento_eda.ipynb
@@ -10,7 +10,9 @@
     "**Objetivo:** Realizar el proceso de limpieza y enriquecimiento del dataset de siniestralidad vial seleccionado, agregando variables temporales simuladas para fortalecer el análisis descriptivo.\n",
     "\n",
     "**Autor:** Juan David Peñaloza Hernandez, Rafael de Jesus Molina Hackermann\n",
+    "\n",
     "**Fecha:** Noviembre 2025\n",
+    "\n",
     "**Dataset:** Sectores Críticos de Siniestralidad Vial"
    ]
   },
@@ -545,14 +547,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1821c33",
+   "id": "22177b31",
    "metadata": {},
    "source": [
     "## 4. Conclusiones del Análisis\n",
     "\n",
-    "* **Distribución:** La mayoría de los sectores críticos presentan un número de fallecidos bajo (entre 1 y 10), pero existen valores atípicos (outliers) que superan las 40 víctimas, los cuales deben ser prioridad para la intervención.\n",
-    "* **Geografía:** Departamentos como Cundinamarca y Antioquia concentran la mayor cantidad de puntos críticos, lo cual es coherente con su densidad poblacional y vial.\n",
-    "* **Tendencia:** (Aquí puedes escribir tu interpretación basada en cómo salga la línea verde en tu ejecución, si sube o baja)."
+    "A partir de las visualizaciones generadas, se derivan los siguientes hallazgos principales sobre los sectores críticos de siniestralidad vial:\n",
+    "\n",
+    "1. **Distribución de la Severidad (Histograma)**: El gráfico de Distribución de Fallecidos revela una asimetría positiva marcada. La gran mayoría de los sectores críticos reportan un número de fallecidos entre 1 y 15. Sin embargo, se observan valores atípicos (outliers) significativos en la cola derecha de la distribución, con puntos críticos que alcanzan más de 40 o 50 fallecidos. Estos puntos específicos representan zonas de \"extrema mortalidad\" que deberían ser la prioridad número uno para intervenciones de infraestructura urgentes.\n",
+    "\n",
+    "2. **Focos Geográficos (Gráfico de Barras)**: El análisis espacial muestra una clara concentración del riesgo. Cundinamarca es, por un margen significativo, el departamento con mayor cantidad de sectores críticos, seguido por Antioquia y Valle del Cauca. Esto sugiere una fuerte correlación entre la densidad de tráfico de las vías principales del país (que convergen en el centro y occidente) y la siniestralidad. Las estrategias de prevención deben descentralizarse, pero manteniendo un foco intensivo en el corredor central del país.\n",
+    "\n",
+    "3. **Correlación Estadística vs. Realidad (Scatter Plot)**: El gráfico de dispersión GiZScore vs. Fallecidos valida la métrica estadística utilizada. Se observa una tendencia positiva: a medida que aumenta el GiZScore (que mide la intensidad estadística de un clúster de accidentes o \"Hot Spot\"), tiende a aumentar también el número de fallecidos reportados. Esto confirma que el GiZScore es un indicador confiable para predecir la severidad real de un sector vial.\n",
+    "\n",
+    "4. **Tendencia Temporal (Gráfico de Línea)**: (Nota: Basado en la simulación de datos 2022-2024). La evolución temporal muestra un comportamiento fluctuante. Se observa un descenso en la siniestralidad acumulada durante el año 2023 en comparación con 2022, seguido de un repunte en 2024. Este patrón de \"rebote\" alerta sobre la necesidad de mantener la constancia en las políticas de seguridad vial, ya que las reducciones temporales no garantizan una mejora sostenida sin intervención continua."
    ]
   }
  ],
